--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
+
 #modal-edit-form {
   display: none;
   position: fixed;
@@ -128,7 +129,18 @@ input[type=file] {
   grid-gap: 10px;
 
 }
-
+#image-categoria {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 10px;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
 #loader {
   position: fixed;
   top: 0;
@@ -197,7 +209,7 @@ font-family: 'Roboto', sans-serif;color: white;
   height: 50%;
   top: 15%;
 }
-#toolbar{position: fixed; top: 0; left: 0; width: 100%; background-color: #4CAF50; padding: 10px; z-index: 9999;}
+#toolbar{position: fixed; top: 0; left: 0; width: 100%; background-color: red; padding: 10px; z-index: 9999;}
 #modal-image {
   height: 100%;
   width: auto;
